--- a/register.html
+++ b/register.html
@@ -3,11 +3,46 @@
 <head>
 	<meta charset='UTF-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	<title>ChronoConnect</title>
-	<script src='[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)'></script>
+	<title>ChronoConnect - Register</title>
+	<script src='https://cdn.tailwindcss.com'></script>
 	<link rel='stylesheet' href='assets/css/style.css'>
 </head>
-<body class='bg-gray-100'>
-	<!-- Content for register.html -->
+<body class='bg-gray-100 h-screen flex items-center justify-center'>
+
+	<div class='bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-md'>
+		<h2 class='text-2xl font-bold mb-6 text-center'>Create an Account</h2>
+
+		<div class='mb-4'>
+			<label class='block text-gray-700 text-sm font-bold mb-2' for='username'>
+				Username
+			</label>
+			<input class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline' id='username' type='text' placeholder='Username'>
+		</div>
+
+		<div class='mb-4'>
+			<label class='block text-gray-700 text-sm font-bold mb-2' for='email'>
+				Email
+			</label>
+			<input class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline' id='email' type='email' placeholder='Email'>
+		</div>
+
+		<div class='mb-6'>
+			<label class='block text-gray-700 text-sm font-bold mb-2' for='password'>
+				Password
+			</label>
+			<input class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline' id='password' type='password' placeholder='Password'>
+		</div>
+
+		<div class='flex items-center justify-between'>
+			<button class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline' type='button' id='register-button'>
+				Register
+			</button>
+			<a class='inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800' href='login.html'>
+				Already have an account?
+			</a>
+		</div>
+	</div>
+
+	<script src='assets/js/auth.js'></script>
 </body>
 </html>
