--- a/profile.html
+++ b/profile.html
@@ -3,11 +3,57 @@
 <head>
 	<meta charset='UTF-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	<title>ChronoConnect</title>
-	<script src='[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)'></script>
+	<title>ChronoConnect - Profile</title>
+	<script src='https://cdn.tailwindcss.com'></script>
 	<link rel='stylesheet' href='assets/css/style.css'>
 </head>
 <body class='bg-gray-100'>
-	<!-- Content for profile.html -->
+	<!-- Navbar -->
+	<div id='navbar-container'></div>
+
+	<div class='container mx-auto mt-8 p-8 bg-white shadow-md rounded-md'>
+		<h1 class='text-2xl font-semibold mb-4'>Profile</h1>
+
+		<div id='profile-details' class='mb-6'>
+			<!-- Profile details will be loaded here -->
+			<img id='profile-picture' src='upload/profile_pictures/default.jpg' alt='Profile Picture' class='w-32 h-32 rounded-full mb-4'>
+			<h2 id='username' class='text-xl font-semibold'></h2>
+			<p id='email'></p>
+			<p id='bio'></p>
+		</div>
+
+		<h2 class='text-xl font-semibold mb-4'>Update Profile</h2>
+		<form id='update-profile-form'>
+			<div class='mb-4'>
+				<label for='username' class='block text-gray-700 text-sm font-bold mb-2'>Username:</label>
+				<input type='text' id='username-update' name='username' class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'>
+			</div>
+			<div class='mb-4'>
+				<label for='email' class='block text-gray-700 text-sm font-bold mb-2'>Email:</label>
+				<input type='email' id='email-update' name='email' class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'>
+			</div>
+			<div class='mb-4'>
+				<label for='bio' class='block text-gray-700 text-sm font-bold mb-2'>Bio:</label>
+				<textarea id='bio-update' name='bio' class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'></textarea>
+			</div>
+			<div class='mb-4'>
+				<label for='profile_picture' class='block text-gray-700 text-sm font-bold mb-2'>Profile Picture:</label>
+				<input type='file' id='profile_picture' name='profile_picture' accept='image/*' class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'>
+			</div>
+
+			<button type='submit' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline'>Update Profile</button>
+			<p id='update-message' class='mt-3 text-green-500'></p>
+		</form>
+	</div>
+
+	<!-- Footer -->
+	<div id='footer-container'></div>
+
+	<script src='assets/js/components.js'></script>
+	<script src='assets/js/profile.js'></script>
+	<script>
+		loadNavbar();
+		loadFooter();
+	</script>
 </body>
 </html>
