--- a/profile.html
+++ b/profile.html
@@ -20,6 +20,8 @@
 			<h2 id='username' class='text-xl font-semibold'></h2>
 			<p id='email'></p>
 			<p id='bio'></p>
+			<button id='send-friend-request-btn' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline'>Send Friend Request</button>
+			<p id='friend-request-message' class='mt-3 text-green-500'></p>
 		</div>
 
 		<h2 class='text-xl font-semibold mb-4'>Update Profile</h2>
@@ -51,9 +53,23 @@
 
 	<script src='assets/js/components.js'></script>
 	<script src='assets/js/profile.js'></script>
+	<script src='assets/js/friends.js'></script>
 	<script>
 		loadNavbar();
 		loadFooter();
+		// Get the user ID from the URL (e.g., profile.html?user_id=123)
+		const urlParams = new URLSearchParams(window.location.search);
+		const profileUserId = urlParams.get('user_id');
+		
+		// If there's a user ID in the URL, initialize the profile with that user's ID
+		if (profileUserId) {
+			loadProfile(profileUserId); // Assumes loadProfile function in profile.js
+			setupFriendRequestButton(profileUserId);
+		} else {
+			// Load the current user's profile if no user ID is provided
+			loadProfile(); // Assumes loadProfile function in profile.js loads current user if no ID is passed
+		}
+		
 	</script>
 </body>
 </html>
